--- a/index.html
+++ b/index.html
@@ -3,66 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrøkMester: Forkorting & Multiplikasjon</title> {/* Endret tittel */}
+    <title>BrøkMester: Forkorting & Multiplikasjon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>BrøkMester: Forkorting & Multiplikasjon</h1> {/* Endret tittel */}
+        <h1>BrøkMester: Forkorting & Multiplikasjon</h1>
     </header>
 
     <nav>
-        <button onclick="showSection('intro')">Introduksjon</button>
-        <button onclick="showSection('principles')">Forkorting Prinsipp</button>
-        {/* <button onclick="showSection('example')">Forkorting Eksempel</button> */} {/* Kan fjernes for å forenkle nav */}
-        <button onclick="showSection('practice')">Forkorting Øving</button>
-        <button onclick="showSection('multiply-principles')">Multiplikasjon Prinsipp</button> {/* NY KNAPP */}
-        {/* <button onclick="showSection('multiply-example')">Multiplikasjon Eksempel</button> */} {/* Kan fjernes */}
-        <button onclick="showSection('multiply-practice')">Multiplikasjon Øving</button> {/* NY KNAPP */}
+        <button data-section="intro">Introduksjon</button>
+        <button data-section="principles">Forkorting Prinsipp</button>
+        <button data-section="practice">Forkorting Øving</button>
+        <button data-section="multiply-principles">Multiplikasjon Prinsipp</button>
+        <button data-section="multiply-practice">Multiplikasjon Øving</button>
     </nav>
 
     <main>
-        {/* --- Eksisterende seksjoner (intro, principles, example, practice) beholdes --- */}
         <section id="intro" class="active">
             <h2>Velkommen til BrøkMester!</h2>
             <p>Lær om forkorting og multiplikasjon av brøk.</p>
             <p><strong>Forkorting:</strong> Å skrive en brøk på sin enkleste form (f.eks. 2/4 blir 1/2).</p>
              <div class="visual-example">
-                {/* ... (pizza-eksempel som før) ... */}
-             </div>
+                 <div class="fraction-visual">
+                    <p>2/4</p>
+                    <div class="pizza">
+                        <div class="slice slice-1-4 marked"></div>
+                        <div class="slice slice-2-4 marked"></div>
+                        <div class="slice slice-3-4"></div>
+                        <div class="slice slice-4-4"></div>
+                    </div>
+                </div>
+                <p class="equals-sign">=</p>
+                 <div class="fraction-visual">
+                    <p>1/2</p>
+                    <div class="pizza pizza-half">
+                        <div class="slice slice-1-2 marked"></div>
+                        <div class="slice slice-2-2"></div>
+                    </div>
+                 </div>
+            </div>
              <p><strong>Multiplikasjon:</strong> Å gange to brøker med hverandre (f.eks. 1/2 * 1/3).</p>
-             <p>Bruk knappene over for å navigere.</p>
+             <p>Bruk knappene over for å velge emne og øve.</p>
         </section>
 
         <section id="principles">
             <h2>Prinsippet: Forkorting</h2>
-            <p>Å forkorte en brøk betyr å dele både teller og nevner med det <strong>samme</strong> tallet (en felles faktor).</p>
+            <p>Å forkorte en brøk betyr å dele både teller (tallet over) og nevner (tallet under) med det <strong>samme</strong> tallet. Dette tallet må være en <strong>felles faktor</strong>.</p>
             <p>Målet er å finne den <strong>Største Felles Faktor (SFF)</strong> for å forkorte brøken helt i ett steg.</p>
-            <p>Eksempel: 4/8</p>
+            <p>Eksempel: Forkort 4/8</p>
             <ul>
-                <li>Felles faktorer for 4 og 8 er 2 og 4.</li>
-                <li>SFF er 4.</li>
-                <li>(4 ÷ 4) / (8 ÷ 4) = 1/2</li>
+                <li>Faktorer for 4: 1, 2, 4</li>
+                <li>Faktorer for 8: 1, 2, 4, 8</li>
+                <li>Felles faktorer: 1, 2, 4</li>
+                <li>Største Felles Faktor (SFF) er 4.</li>
+                <li>Del teller og nevner med SFF: (4 ÷ 4) / (8 ÷ 4) = 1/2</li>
             </ul>
-             <button onclick="showSection('practice')">Øv på forkorting</button>
-        </section>
-
-        <section id="example">
-            {/* ... (Forkortingseksempel 12/18 som før) ... */}
-             <h2>Eksempel: Forkorting av 12/18</h2>
-            <div id="example-steps">
-                <p><strong>Oppgave:</strong> Forkort brøken <span class="fraction-inline"><span class="numerator">12</span><span class="denominator">18</span></span></p>
-                <p><strong>Steg 1: Finn felles faktorer.</strong> Felles faktorer for 12 og 18 er 2, 3, og 6.</p>
-                <p><strong>Steg 2: Velg Største Felles Faktor (SFF).</strong> SFF er 6.</p>
-                <p><strong>Steg 3: Del teller og nevner med SFF (6).</strong> (12 ÷ 6) / (18 ÷ 6) = 2 / 3</p>
-                 <p><strong>Resultat:</strong> <span class="fraction-inline"><span class="numerator">2</span><span class="denominator">3</span></span></p>
-            </div>
-             <button onclick="showSection('practice')">Øv på forkorting</button>
+            <p>Resultat: <span class="fraction-inline"><span class="numerator">1</span><span class="denominator">2</span></span></p>
+             <button data-section="practice" class="nav-button-inline">Øv på forkorting</button>
         </section>
 
         <section id="practice">
-            {/* ... (Øvingsområde for forkorting som før) ... */}
              <h2>Øvelse: Forkorting</h2>
             <p>Forkort brøken nedenfor så mye som mulig:</p>
             <div id="problem-area">
@@ -72,26 +74,24 @@
                 </div>
             </div>
             <div id="answer-area">
-                <label for="user-numerator">Ny teller:</label>
+                <label for="user-numerator">Svar Teller:</label>
                 <input type="number" id="user-numerator" min="1">
                 <br>
-                 <label for="user-denominator">Ny nevner:</label>
+                 <label for="user-denominator">Svar Nevner:</label>
                 <input type="number" id="user-denominator" min="1">
                 <br>
-                <button id="check-answer-btn">Sjekk svar</button>
+                <button id="check-shortening-btn">Sjekk svar</button>
                  <button id="hint-btn">Hint (Vis SFF)</button>
             </div>
             <div id="feedback-area">
-                <p id="feedback"></p>
+                <p id="shortening-feedback"></p>
             </div>
-            <button id="new-task-btn" style="display: none;">Ny Forkortingsoppgave</button>
+            <button id="new-shortening-task-btn" class="new-task-button" style="display: none;">Ny Forkortingsoppgave</button>
         </section>
-
-        {/* --- NYE SEKSJONER FOR MULTIPLIKASJON --- */}
 
         <section id="multiply-principles">
             <h2>Prinsippet: Multiplikasjon av brøk</h2>
-            <p>Å multiplisere (gange) to brøker er enklere enn du tror!</p>
+            <p>Å multiplisere (gange) to brøker er rett frem:</p>
             <p><strong>Regel: Teller ganger teller, og nevner ganger nevner.</strong></p>
             <div class="formula-display">
                 <span class="fraction-inline"><span class="numerator">a</span><span class="denominator">b</span></span>
@@ -100,40 +100,16 @@
                 <span class="operator"> = </span>
                 <span class="fraction-inline"><span class="numerator">a × c</span><span class="denominator">b × d</span></span>
             </div>
-            <p><strong>Eksempel:</strong> 1/2 * 3/4</p>
+            <p><strong>Eksempel:</strong> Regn ut 1/2 * 3/4</p>
             <ul>
-                <li>Teller ganger teller: 1 × 3 = 3</li>
-                <li>Nevner ganger nevner: 2 × 4 = 8</li>
+                <li>Teller × Teller: 1 × 3 = 3</li>
+                <li>Nevner × Nevner: 2 × 4 = 8</li>
                 <li>Resultat: 3/8</li>
             </ul>
-            <p><strong>Viktig tips:</strong> Etter at du har multiplisert, må du ofte <strong>forkorte</strong> svaret til den enkleste formen!</p>
-            <p>Noen ganger kan du også forkorte *før* du multipliserer (kryssforkorting). Dette kan gjøre tallene mindre å jobbe med.</p>
-            <button onclick="showSection('multiply-example')">Se et eksempel</button>
-        </section>
-
-        <section id="multiply-example">
-            <h2>Eksempel: Multiplikasjon (2/3 * 3/4)</h2>
-            <p><strong>Oppgave:</strong> Regn ut <span class="fraction-inline"><span class="numerator">2</span><span class="denominator">3</span></span> × <span class="fraction-inline"><span class="numerator">3</span><span class="denominator">4</span></span></p>
-
-            <p><strong>Metode 1: Multipliser først, forkort etterpå</strong></p>
-            <ol>
-                <li>Teller × Teller: 2 × 3 = 6</li>
-                <li>Nevner × Nevner: 3 × 4 = 12</li>
-                <li>Resultat før forkorting: <span class="fraction-inline"><span class="numerator">6</span><span class="denominator">12</span></span></li>
-                <li>Forkort 6/12: SFF for 6 og 12 er 6. (6 ÷ 6) / (12 ÷ 6) = 1/2</li>
-            </ol>
-            <p><strong>Endelig svar: <span class="fraction-inline"><span class="numerator">1</span><span class="denominator">2</span></span></strong></p>
-
-            <p style="margin-top: 20px;"><strong>Metode 2: Kryssforkorting først (Valgfritt, men smart!)</strong></p>
-             <p>Se om du kan forkorte tall på skrå (eller loddrett) *før* du ganger.</p>
-            <ol>
-                <li>Se på 2 (teller) og 4 (nevner på skrå): Begge kan deles på 2. (2÷2=1, 4÷2=2)</li>
-                 <li>Se på 3 (nevner) og 3 (teller på skrå): Begge kan deles på 3. (3÷3=1, 3÷3=1)</li>
-                <li>Den nye oppgaven blir: <span class="fraction-inline"><span class="numerator">1</span><span class="denominator">1</span></span> × <span class="fraction-inline"><span class="numerator">1</span><span class="denominator">2</span></span></li>
-                 <li>Multipliser: (1 × 1) / (1 × 2) = 1/2</li>
-            </ol>
-             <p><strong>Samme endelige svar: <span class="fraction-inline"><span class="numerator">1</span><span class="denominator">2</span></span></strong></p>
-             <button onclick="showSection('multiply-practice')">Øv på multiplikasjon</button>
+            <p>Resultat: <span class="fraction-inline"><span class="numerator">3</span><span class="denominator">8</span></span></p>
+            <p><strong>Viktig:</strong> Etter at du har multiplisert, må du ofte <strong>forkorte</strong> svaret til den enkleste formen!</p>
+            <p>Eksempel med forkorting: 2/3 * 3/4 = (2*3)/(3*4) = 6/12. Dette kan forkortes til 1/2 (ved å dele teller og nevner med 6).</p>
+             <button data-section="multiply-practice" class="nav-button-inline">Øv på multiplikasjon</button>
         </section>
 
         <section id="multiply-practice">
@@ -155,27 +131,25 @@
 
             <div id="multiply-answer-area">
                 <label for="m-user-numerator">Svar Teller:</label>
-                <input type="number" id="m-user-numerator" min="1">
+                <input type="number" id="m-user-numerator" min="0">  <!-- Tillat 0 i teller for multiplikasjon -->
                 <br>
                  <label for="m-user-denominator">Svar Nevner:</label>
                 <input type="number" id="m-user-denominator" min="1">
                 <br>
                 <button id="m-check-answer-btn">Sjekk svar</button>
-                 {/* Hint for multiplikasjon er mindre rett frem, kan droppes eller gi generell info */}
-                 {/* <button id="m-hint-btn">Hint</button> */}
             </div>
 
             <div id="multiply-feedback-area">
                 <p id="m-feedback"></p>
             </div>
 
-            <button id="m-new-task-btn" style="display: none;">Ny Multiplikasjonsoppgave</button>
+            <button id="m-new-task-btn" class="new-task-button" style="display: none;">Ny Multiplikasjonsoppgave</button>
         </section>
 
     </main>
 
     <footer>
-        <p>Laget for interaktiv læring.</p>
+        <p>BrøkMester v1.0</p>
     </footer>
 
     <script src="script.js"></script>
